tests/failed/06-no-sense.stderr
error: this attribute does not make sense
 --> $DIR/06-no-sense.rs:6:5
  |
6 |     #[endian(little)]
  |     ^^^^^^^^^^^^^^^^^

error: this attribute does not make sense
  --> $DIR/06-no-sense.rs:13:5
   |
13 |     #[endian(little)]
   |     ^^^^^^^^^^^^^^^^^
